Deployments/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eshop-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: eshop.local
    http:
      paths:
      - path: /api/catalog(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: catalog-api
            port:
              number: 80
      - path: /api/basket(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: basket-api
            port:
              number: 80
      - path: /api/discount(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: discount-api
            port:
              number: 80
      - path: /api/ordering(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: ordering-api
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: ocelotapigw
            port:
              number: 80
